[metadata]
name = vmbpy
version = attr: vmbpy.__version__
author = Allied Vision Technologies
description = Python bindings for VmbC
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
url = https://github.com/alliedvision/vmbpy
project_urls =
    Bug Tracker = https://github.com/alliedvision/vmbpy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    vmbpy
    vmbpy.c_binding
    vmbpy.util
python_requires = >=3.7
include_package_data = True

[options.extras_require]
numpy = numpy
opencv = opencv-python
test =
    unittest-xml-reporting
    flake8
    flake8-junit-report
    mypy
    coverage

[flake8]
max-line-length = 100

[coverage:run]
source = vmbpy

[coverage:report]
exclude_lines =
    coverage: skip
    def __repr__
    def __str__
